--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
     "version": 2,
     "builds": [
         {
-            "src": "AlgoLaw_Website/run.py",
+            "src": "AlgoLaw_Website/index.py",
             "use": "@vercel/python"
         }
     ],
